k8s/deployment-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: notesapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: angelavel/backend:latest
          ports:
            - containerPort: 8080
