k8s/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: notesapp
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
