k8s/service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: notesapp
spec:
  ports:
    - port: 5432
  clusterIP: None
  selector:
    app: postgres
