k8s/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: notesapp
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
